# TP_Autoradio_ESE

./: README.md
AutoRadio/: .cproject  .mxproject  .project  AutoRadio.ioc  CMakeLists.txt
AutoRadio/Core/Inc/: main.h
AutoRadio/Core/Src/: gpio.c  main.c  sai.c  spi.c
AutoRadio/MCP23S17/: MCP23S17.c  MCP23S17.h
AutoRadio/cmake/stm32cubemx/: CMakeLists.txt
AutoRadio/sgtl5000/: sgtl5000.c  sgtl5000.h
AutoRadio/shell/: shell.c  shell.h
drawio/: equadiff.drawio
